Use Level.Trial for benchmarks to reuse connections